--- a/Shane.Church.Web.v2012/Shane.Church.Web.v2012.csproj
+++ b/Shane.Church.Web.v2012/Shane.Church.Web.v2012.csproj
@@ -294,6 +294,7 @@
     <Content Include="Content\SyntaxHighlighter\shThemeRDark.css" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
+    <None Include="Properties\PublishProfiles\schurch - FTP %282%29.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="software\gadgets\stirlingweather\Stirling-Weather-Extended.png" />
@@ -301,6 +302,14 @@
     <Content Include="software\gadgets\stirlingweather\Stirling-Weather-Warnings.png" />
     <Content Include="software\gadgets\stirlingweather\Stirling-Weather.png" />
     <Content Include="Global.asax" />
+    <Content Include="software\windowsphone\stirlingbirthday\01.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\02.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\03.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\04.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\05.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\06.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\07.WVGA.png" />
+    <Content Include="software\windowsphone\stirlingbirthday\08.WVGA.png" />
     <Content Include="software\windowsphone\stirlingmoney\02.png" />
     <Content Include="software\windowsphone\stirlingmoney\03.png" />
     <Content Include="software\windowsphone\stirlingmoney\04.png" />
