--- a/Shane.Church.Web.Data.AWS/Shane.Church.Web.Cloud.AWS.csproj
+++ b/Shane.Church.Web.Data.AWS/Shane.Church.Web.Cloud.AWS.csproj
@@ -39,8 +39,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK">
-      <HintPath>..\packages\AWSSDK.1.5.29.0\lib\AWSSDK.dll</HintPath>
+    <Reference Include="AWSSDK, Version=2.0.5.0, Culture=neutral, PublicKeyToken=9f476d3089b52be3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AWSSDK.2.0.5.0\lib\net45\AWSSDK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
