--- a/Shane.Church.Web.v2012/Web.config
+++ b/Shane.Church.Web.v2012/Web.config
@@ -67,6 +67,9 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <staticContent>
+      <mimeMap fileExtension=".woff" mimeType="application/x-woff"/>
+    </staticContent>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
