--- a/Shane.Church.Web.v2012/Shane.Church.Web.v2012.csproj
+++ b/Shane.Church.Web.v2012/Shane.Church.Web.v2012.csproj
@@ -319,7 +319,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\schurch - FTP %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\schurch - FTP %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\schurch - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\schurch - Web Deploy %283%29.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
