--- a/Shane.Church.Web.v2015/project.json
+++ b/Shane.Church.Web.v2015/project.json
@@ -1,21 +1,25 @@
 {
-    "webroot": "wwwroot",
-    "version": "1.0.0-*",
-    "exclude": [
-        "wwwroot"
-    ],
-    "packExclude": [
-        "node_modules",
-        "bower_components",
-        "**.kproj",
-        "**.user",
-        "**.vspscc"
-    ],
-    "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta2",
-        "Microsoft.AspNet.Mvc": "6.0.0.0-beta2",
-        "Microsoft.AspNet.Diagnostics": "1.0.0-beta2"
-    },
+	"webroot": "wwwroot",
+	"version": "1.0.0-*",
+	"bundleExclude": [
+		"node_modules",
+		"bower_components",
+		"**.kproj",
+		"**.user",
+		"**.vspscc"
+	],
+	"exclude": [
+		"wwwroot",
+		"node_modules",
+		"bower_components"
+	],
+	"dependencies": {
+		"Microsoft.AspNet.Server.IIS": "1.0.0-beta3",
+		"Microsoft.AspNet.Mvc": "6.0.0-beta3",
+		"Microsoft.AspNet.Diagnostics": "1.0.0-beta3",
+		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
+		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta3"
+	},
     "frameworks": {
         "aspnet50": {
             "dependencies": {
