--- a/Shane.Church.Web.v2015/project.json
+++ b/Shane.Church.Web.v2015/project.json
@@ -18,7 +18,8 @@
 		"Microsoft.AspNet.Mvc": "6.0.0-beta3",
 		"Microsoft.AspNet.Diagnostics": "1.0.0-beta3",
 		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
-		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta3"
+		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta3",
+		"Microsoft.AspNet.StaticFiles": "1.0.0-beta3"
 	},
     "frameworks": {
         "aspnet50": {
