--- a/Shane.Church.Web.v2015/bower.json
+++ b/Shane.Church.Web.v2015/bower.json
@@ -5,7 +5,9 @@
     "jquery": "~1.11.2",
     "bootstrap": "~3.3.2",
     "html5shiv": "~3.7.2",
-    "respond": "~1.4.2"
+    "respond": "~1.4.2",
+    "normalize.css": "~3.0.2",
+    "fontawesome": "~4.3.0"
   },
   "exportsOverride": {}
 }
