--- a/Shane.Church.Web.v2015/bower.json
+++ b/Shane.Church.Web.v2015/bower.json
@@ -6,7 +6,11 @@
     "bootstrap": "~3.3.2",
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
-    "normalize.css": "~3.0.2"
+	"normalize.css": "~3.0.2",
+    "angular": "1.2.x",
+    "angular-route": "1.2.x",
+    "angular-loader": "1.2.x",
+    "angular-mocks": "~1.2.x"
   },
   "exportsOverride": {}
 }
