--- a/Shane.Church.Web.v2015/Properties/debugSettings.json
+++ b/Shane.Church.Web.v2015/Properties/debugSettings.json
@@ -1,10 +1,3 @@
 {
-  "profiles": [
-    {
-      "name": "IIS Express",
-      "launchBrowser": true,
-      "launchUrl": "index.html",
-      "sdkVersion": "kre-clr-win-x86.1.0.0-beta3"
-    }
-  ]
+  "profiles": []
 }
