--- a/Shane.Church.Web.v2015/bower.json
+++ b/Shane.Church.Web.v2015/bower.json
@@ -7,11 +7,12 @@
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
     "normalize.css": "~3.0.2",
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x",
-    "ngSmoothScroll": "~1.7.1"
+    "angular": "^1.2.x",
+    "angular-route": "^1.2.x",
+    "angular-loader": "^1.2.x",
+    "angular-mocks": "^1.2.x",
+    "ngSmoothScroll": "^1.7.1",
+    "angular-resource": "^1.3.14"
   },
   "exportsOverride": {}
 }
