--- a/Shane.Church.Web.v2015/package.json
+++ b/Shane.Church.Web.v2015/package.json
@@ -7,5 +7,7 @@
     "grunt-bower-task": "^0.4.0",
     "grunt-modernizr": "^0.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "phantomjs": "^1.9.16"
+  }
 }
