--- a/Shane.Church.Web.v2015/project.json
+++ b/Shane.Church.Web.v2015/project.json
@@ -19,7 +19,8 @@
 		"Microsoft.AspNet.Diagnostics": "1.0.0-beta3",
 		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
 		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta3",
-		"Microsoft.AspNet.StaticFiles": "1.0.0-beta3"
+		"Microsoft.AspNet.StaticFiles": "1.0.0-beta3",
+		"Microsoft.AspNet.WebApi.Client": "5.2.3"
 	},
 	"frameworks": {
 		"aspnet50": {
