--- a/Shane.Church.PhotoGallery.Publish/Shane.Church.PhotoGallery.Publish.csproj
+++ b/Shane.Church.PhotoGallery.Publish/Shane.Church.PhotoGallery.Publish.csproj
@@ -67,9 +67,9 @@
     <Reference Include="Microsoft.WindowsLive.PublishPlugins">
       <HintPath>..\lib\Windows Live Photo Gallery\Microsoft.WindowsLive.PublishPlugins.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp, Version=104.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
+    <Reference Include="RestSharp, Version=105.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.1.0\lib\net45\RestSharp.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
