--- a/Shane.Church.Web.Data.AWS/Shane.Church.Web.Cloud.AWS.csproj
+++ b/Shane.Church.Web.Data.AWS/Shane.Church.Web.Cloud.AWS.csproj
@@ -40,8 +40,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AWSSDK, Version=2.0.5.0, Culture=neutral, PublicKeyToken=9f476d3089b52be3, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\AWSSDK.2.0.5.0\lib\net45\AWSSDK.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
