--- a/Shane.Church.Web.v2015/project.json
+++ b/Shane.Church.Web.v2015/project.json
@@ -14,13 +14,16 @@
 		"bower_components"
 	],
 	"dependencies": {
-		"Microsoft.AspNet.Server.IIS": "1.0.0-beta3",
-		"Microsoft.AspNet.Mvc": "6.0.0-beta3",
-		"Microsoft.AspNet.Diagnostics": "1.0.0-beta3",
-		"Microsoft.Framework.DependencyInjection": "1.0.0-beta3",
-		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta3",
-		"Microsoft.AspNet.StaticFiles": "1.0.0-beta3",
-		"Microsoft.AspNet.WebApi.Client": "5.2.3"
+		"Microsoft.AspNet.Diagnostics": "1.0.0-beta5",
+		"Microsoft.AspNet.Mvc": "6.0.0-beta5",
+		"Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
+		"Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
+		"Microsoft.Framework.Logging.Console": "1.0.0-beta5",
+		"Microsoft.Framework.Configuration.Abstractions": "1.0.0-beta5",
+		"Microsoft.Framework.ConfigurationModel": "1.0.0-beta4",
+		"Microsoft.Framework.Configuration.Json": "1.0.0-beta5",
+		"Microsoft.Framework.DependencyInjection.Abstractions": "1.0.0-beta5",
+		"Microsoft.Framework.Logging.Abstractions": "1.0.0-beta5"
 	},
 	"frameworks": {
 		"aspnet50": {
